[gd_scene load_steps=17 format=3 uid="uid://dh8g2y742ioxt"]

[ext_resource type="Script" path="res://smooth_world.gd" id="1_m8s2y"]
[ext_resource type="Script" path="res://camera.gd" id="2_6at5h"]
[ext_resource type="VoxelGeneratorGraph" uid="uid://bs56318d6tpl1" path="res://inverted_sphere_graph_gen.tres" id="4_vw0yl"]
[ext_resource type="Shader" path="res://smooth_world.gdshader" id="5_qblvu"]
[ext_resource type="Texture2D" uid="uid://28diu6mhiupf" path="res://smooth_terrain/dirt_albedo.png" id="6_vd2d5"]
[ext_resource type="Texture2D" uid="uid://bk4ett6ebf0c5" path="res://smooth_terrain/grass_albedo.png" id="7_uqwwx"]
[ext_resource type="Material" uid="uid://cuha5pwq4pade" path="res://SphereEditMaterial.tres" id="8_5gwrn"]
[ext_resource type="Script" path="res://VoxelTerrain.gd" id="8_o6cve"]
[ext_resource type="Material" uid="uid://ci8tiv227dfah" path="res://BlendBallMaterial.tres" id="9_siq5o"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4jqid"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_whtm3"]
sky_material = SubResource("ProceduralSkyMaterial_4jqid")

[sub_resource type="Environment" id="Environment_7hnbo"]
background_mode = 2
sky = SubResource("Sky_whtm3")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="VoxelMesherTransvoxel" id="VoxelMesherTransvoxel_rrkwj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f30sg"]
render_priority = 0
shader = ExtResource("5_qblvu")
shader_parameter/u_transition_mask = null
shader_parameter/u_voxel_virtual_texture_tile_size = null
shader_parameter/u_voxel_virtual_texture_fade = null
shader_parameter/u_voxel_cell_size = null
shader_parameter/u_voxel_block_size = null
shader_parameter/u_lod_fade = null
shader_parameter/u_texture_top = ExtResource("7_uqwwx")
shader_parameter/u_texture_sides = ExtResource("6_vd2d5")

[sub_resource type="SphereMesh" id="SphereMesh_25lff"]
radius = 1.0
height = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_e4d1c"]

[node name="SmoothWorld" type="Node"]
script = ExtResource("1_m8s2y")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7hnbo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0.283032, -0.0123648, 0.959031, -0.412185, 0.901301, 0.133266, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.995381, 0, 0.0960021, 0, 1, 0, -0.0960021, 0, 0.995381, 0, 0, 0)
script = ExtResource("2_6at5h")

[node name="VoxelViewer" type="VoxelViewer" parent="Camera3D"]

[node name="VoxelTerrain" type="VoxelTerrain" parent="."]
generator = ExtResource("4_vw0yl")
mesher = SubResource("VoxelMesherTransvoxel_rrkwj")
material_override = SubResource("ShaderMaterial_f30sg")
script = ExtResource("8_o6cve")

[node name="EditIndicators" type="Node3D" parent="."]
visible = false

[node name="SphereEdit" type="MeshInstance3D" parent="EditIndicators"]
visible = false
mesh = SubResource("SphereMesh_25lff")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("8_5gwrn")

[node name="CubeEdit" type="MeshInstance3D" parent="EditIndicators"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_e4d1c")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("8_5gwrn")

[node name="BlendBall" type="MeshInstance3D" parent="EditIndicators"]
visible = false
mesh = SubResource("SphereMesh_25lff")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("9_siq5o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/ScrollContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/ScrollContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/ScrollContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/ScrollContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Controls

H - Toggle controls window
WASD - Move around
E/Q - Move up/down
Left mouse button - Pull terrain
Right mouse button - Push terrain
Mouse scroll - Change edit range
1/2/3 - Choose edit mode
hold CTRL + Mouse click - Edit terrain once
hold ALT + Mouse scroll - Change player speed
hold SHIFT - Move 2.5x times faster
SPACE - Show/Hide edit indicator
ESC - Take control of mouse"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/ScrollContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[connection signal="tree_exited" from="VoxelTerrain" to="VoxelTerrain" method="_on_tree_exited"]
